<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c5cae9"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:id="@+id/atlas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingEnd="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingStart="16dp"
            android:text="@string/warn"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/radio_ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ques1_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ques1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/ques1"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/ans11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer1"
                        android:padding="8dp"
                        android:text="@string/ans11" />

                    <RadioButton
                        android:id="@+id/ans12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer1"
                        android:padding="8dp"
                        android:text="@string/ans12" />

                    <RadioButton
                        android:id="@+id/ans13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer1"
                        android:padding="8dp"
                        android:text="@string/ans13" />

                    <RadioButton
                        android:id="@+id/ans14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer1"
                        android:padding="8dp"
                        android:text="@string/ans14" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ques2_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ques2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/ques2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/ans21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer2"
                        android:padding="8dp"
                        android:text="@string/ans21" />

                    <RadioButton
                        android:id="@+id/ans22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer2"
                        android:padding="8dp"
                        android:text="@string/ans22" />

                    <RadioButton
                        android:id="@+id/ans23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer2"
                        android:padding="8dp"
                        android:text="@string/ans23" />

                    <RadioButton
                        android:id="@+id/ans24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer2"
                        android:padding="8dp"
                        android:text="@string/ans24" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ques3_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ques3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/ques3"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/ans31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer3"
                        android:padding="8dp"
                        android:text="@string/ans31" />

                    <RadioButton
                        android:id="@+id/ans32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer3"
                        android:padding="8dp"
                        android:text="@string/ans32" />

                    <RadioButton
                        android:id="@+id/ans33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer3"
                        android:padding="8dp"
                        android:text="@string/ans33" />

                    <RadioButton
                        android:id="@+id/ans34"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="answer3"
                        android:padding="8dp"
                        android:text="@string/ans34" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/check_ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ques4_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ques4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/ques4"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/ans41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ans41" />

                <CheckBox
                    android:id="@+id/ans42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ans42" />

                <CheckBox
                    android:id="@+id/ans43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ans43" />

                <CheckBox
                    android:id="@+id/ans44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ans44" />

                <Button
                    android:id="@+id/done4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:onClick="answer4"
                    android:text="@string/done" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ques5_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ques5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/ques5"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/ans51"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ans51" />

                <CheckBox
                    android:id="@+id/ans52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ans52" />

                <CheckBox
                    android:id="@+id/ans53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ans53" />

                <CheckBox
                    android:id="@+id/ans54"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ans54" />

                <Button
                    android:id="@+id/done5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:onClick="answer5"
                    android:text="@string/done" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ques6_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ques6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/ques6"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ans61"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ans61"
                    android:padding="8dp" />

                <Button
                    android:id="@+id/done6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent"
                    android:onClick="answer6"
                    android:text="@string/done" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/final_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/result"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/result_hint"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1.1"
                    android:background="@color/colorAccent"
                    android:onClick="submitScore"
                    android:text="@string/submit"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:onClick="resetScore"
                    android:text="@string/reset"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
